// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article standfirst with content 1`] = `
<Text
  accessibilityRole="header"
  aria-level="2"
>
  This is a standfirst
</Text>
`;

exports[`2. article standfirst with no content 1`] = `null`;

exports[`3. article label uses a colour if override is provided 1`] = `
<View>
  <ArticleLabel
    color="#000000"
    title="Random Label"
  />
</View>
`;

exports[`4. article label uses the video label when isvideo is truthy 1`] = `
<View>
  <VideoLabel
    color="#1D1D1B"
    title="Random Label"
  />
</View>
`;

exports[`5. article label renders null if there is no text 1`] = `null`;

exports[`6. article meta uses default section colour 1`] = `
<View>
  <View>
    <ArticleBylineWithLinks
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {
                  "slug": "kaya-burgess",
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Kaya Burgess",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "author",
              },
            ],
          },
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": ", Religious Affairs Correspondent",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
      color="#1D1D1B"
    />
  </View>
  <View>
    <Text>
      Monday March 23 2015, 7.39pm, The Times
    </Text>
  </View>
</View>
`;
